--- a/HTML/Ejercicio navidad/css/main.css
+++ b/HTML/Ejercicio navidad/css/main.css
@@ -158,7 +158,9 @@ a .tarjetas:hover {
     margin-bottom: 30px;
 }
 
-#tablamains,tr,td {
+#tablamains,
+tr,
+td {
     border: 1px solid black;
 }
 
@@ -203,7 +205,7 @@ a .tarjetas:hover {
 /*PRECIOS*/
 
 #cajaMenu2 #menu li {
-   margin-left: 51.5em;
+    margin-left: 51.5em;
 }
 
 #contenedor-tarjetasP .tarjetas h2 {
@@ -211,7 +213,8 @@ a .tarjetas:hover {
     padding-bottom: 10px;
 }
 
-#contenedor-tarjetasP, .tarjetas h4 {
+#contenedor-tarjetasP,
+.tarjetas h4 {
     text-align: center;
 }
 
@@ -245,21 +248,182 @@ a .tarjetas:hover {
 /*FIN DE TIENDA*/
 /*COLECCIÓN*/
 
+#divMapa img {
+    width: 100%;
+    border: 1px black solid;
+}
 
+#ns hr {
+    margin-bottom: 30px;
+}
+
+/*FIN DE COLECCIÓN*/
+/*CONTACTO*/
+
+.act2 {
+    width: 600px;
+    background-image: linear-gradient(rgb(0, 119, 255), rgb(0, 60, 255), blue);
+    margin: auto;
+    padding: 50px;
+    margin-top: 40px;
+    border-radius: 10px;
+    border: 1px solid gainsboro;
+    font-family: "Ubuntu";
+}
+
+.act2 input[type="text"] {
+    display: block;
+    width: 500px;
+    margin-bottom: 10px;
+    border: solid chocolate 1px;
+    border-radius: 8px;
+    padding: 5px;
+    padding-left: 35px;
+    background: no-repeat left url(../media/rust.png);
+    background-color: white;
+    background-size: 20px;
+    background-position: 5px 5px;
+}
+
+.act2 input[type="password"] {
+    display: block;
+    width: 500px;
+    margin-bottom: 10px;
+    border: solid chocolate 1px;
+    border-radius: 8px;
+    padding: 5px;
+    padding-left: 35px;
+    background: no-repeat left url(../media/rust.png);
+    background-color: white;
+    background-size: 20px;
+    background-position: 5px 5px;
+}
+
+.act2 input[type="text"]:focus {
+    display: block;
+    width: 500px;
+    margin-bottom: 10px;
+    border: solid darkred 1px;
+    border-radius: 8px;
+    padding: 5px;
+    padding-left: 35px;
+    background: no-repeat left url(../media/rust.png);
+    background-color: #ccc;
+    background-size: 20px;
+    background-position: 5px 5px;
+}
+
+.act2 input[type="password"]:focus {
+    display: block;
+    width: 500px;
+    margin-bottom: 10px;
+    border: solid darkred 1px;
+    border-radius: 8px;
+    padding: 5px;
+    padding-left: 35px;
+    background: no-repeat left url(../media/rust.png);
+    background-color: #ccc;
+    background-size: 20px;
+    background-position: 5px 5px;
+}
+
+.act2 a {
+    background-color: white;
+    text-decoration: none;
+    padding: 7px;
+    border-radius: 8px;
+}
+
+.act2 a[href="https://accounts.google.com"] {
+    padding-right: 372px;
+    border: solid blue 2px;
+    background-color: royalblue;
+    color: white;
+}
+
+.act2 a[href="https://accounts.google.com"]:hover {
+    padding-right: 372px;
+    background-color: blue;
+    color: white;
+    border: solid black 2px;
+}
+
+.act2 a[href="https://www.facebook.com/"] {
+    padding-right: 356px;
+    border: solid blue 2px;
+    background-color: royalblue;
+    color: white;
+}
+
+.act2 a[href="https://www.facebook.com/"]:hover {
+    padding-right: 356px;
+    background-color: blue;
+    color: white;
+    border: solid black 2px;
+}
+
+.final {
+    text-align: center;
+}
+
+input[type="reset"] {
+    background-color: royalblue;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+input[type="reset"]:hover {
+    background-color: rgb(52, 93, 214);
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+input[value="Enviar inscripción"] {
+    background-color: royalblue;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+input[value="Enviar inscripción"]:hover {
+    background-color: rgb(52, 93, 214);
+    border: none;
+    color: whitesmoke;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+#formTabla, tr, td{
+    margin: auto;
+    border: none;
+}
 
 /*ERROR*/
 
 #error {
-background-color: red;
-text-align: center;
-text-transform: uppercase;
-font-weight: bold;
-font-family: 'Nunito', sans-serif;
+    background-color: red;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-family: 'Nunito', sans-serif;
 }
 
 #error img {
     width: 37%;
-    height: 37%; 
+    height: 37%;
 }
 
 #error a {
