--- a/HTML/Ejercicio navidad/css/main.css
+++ b/HTML/Ejercicio navidad/css/main.css
@@ -175,12 +175,35 @@ td {
     transition: 0.3s;
 }
 
+#boton11 {
+    width: 100%;
+    height: 30px;
+    margin-top: 5px;
+    border-radius: 4px;
+    border: 1px black solid;
+    background-color: rgb(150, 140, 140);
+    font-weight: bold;
+    color: white;
+    transition: 0.3s;
+}
+
 #boton1:hover {
     width: 100%;
     height: 30px;
     border-radius: 4px;
     border: 1px black solid;
     background-color: rgb(31, 31, 231);
+    font-weight: bold;
+    color: gainsboro;
+    cursor: pointer;
+}
+
+#boton11:hover {
+    width: 100%;
+    height: 30px;
+    border-radius: 4px;
+    border: 1px black solid;
+    background-color: rgb(180, 140, 140);
     font-weight: bold;
     color: gainsboro;
     cursor: pointer;
@@ -197,6 +220,7 @@ td {
 
 #tabla2 {
     border-collapse: collapse;
+    border: 1px black solid;
     margin-bottom: 30px;
 }
 
@@ -269,6 +293,10 @@ td {
     border-radius: 10px;
     border: 1px solid gainsboro;
     font-family: "Ubuntu";
+}
+
+.act2 h1 {
+    text-align: center;
 }
 
 .act2 input[type="text"] {
@@ -406,9 +434,75 @@ input[value="Enviar inscripción"]:hover {
     cursor: pointer;
 }
 
-#formTabla, tr, td{
+#formTabla,
+tr,
+td {
     margin: auto;
     border: none;
+}
+
+/*FIN DE CONTACTO*/
+/*FABRICACION*/
+
+#cajaMenuFa {
+    margin-left: 27em;
+}
+
+#hrFa {
+    margin-bottom: 30px;
+}
+
+#olF {
+    list-style: decimal;
+    margin: auto;
+}
+
+#olF ol {
+    list-style: initial;
+}
+
+img[src="../media/fabricacion.jpg"] {
+    width: 100%;
+}
+
+#laTabla {
+    width: 100%;
+    border: 2px black solid;
+    background-color: rgb(211, 211, 211);;
+}
+
+#laTabla #elTr {
+    width: 20%;
+}
+
+
+/*FIN DE FABRICACION*/
+/*SOBRE NOSOTROS*/
+
+#laTabla2 {
+    width: 100%;
+    border: 2px black solid;
+    background-color: rgb(211, 211, 211);;
+}
+
+#laTabla #elTr {
+    width: 20%;
+}
+
+img[src="../media/fabrica.jpg"] {
+    width: 100%;
+    height: 600px;
+}
+
+
+/*FIN DE SOBRE NOSOTROS*/
+/*OFERTAS*/
+
+#spn {
+   text-transform: uppercase;
+   font-weight: bolder;
+   font-style: oblique;
+   color: darkblue;
 }
 
 /*ERROR*/
