--- a/HTML/Boostrap mundo today/main.css
+++ b/HTML/Boostrap mundo today/main.css
@@ -1,6 +1,9 @@
 html {
     box-sizing: border-box;
 }
+body {
+    background-image: linear-gradient(red,blue);
+}
 .iconos:hover {
     transition: 0.1s;
     color: red;
